// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`types a basic model 1`] = `
"export type Account = ResultRecord & {
    email: string;
    name: string;
};
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types a model with a summary 1`] = `
"/**
 * A user account.
 */
export type Account = ResultRecord & {
    email: string;
    name: string;
};
/**
 * A user account.
 */
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types a model with a link field 1`] = `
"export type Account = ResultRecord & {
    email: string;
    name: string;
};
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
export type Post<TUsing extends Array<"author"> | "all" = [
]> = ResultRecord & {
    author: ResolveSchema<Account, TUsing, "author">;
    title: string;
};
export type <TUsing extends Array<"author"> | "all" = [
]> = Array<Post<TUsing>> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;

exports[`types a model with a link field that does not exist 1`] = `
"export type Account = ResultRecord & {
    email: string;
    latestPost: unknown;
    name: string;
};
export type Accounts = Array<Account> & {
    moreBefore?: string;
    moreAfter?: string;
};
"
`;
